--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     working_directory: /go/src/github.com/flaccid/slack-incoming-webhook-tools
     steps:
       - checkout
-      - run: go get ./...
+      - run: curl https://glide.sh/get | sh
+      - run: glide install
       - run: go build -o bin/siwc cmd/siwc/siwc.go
       - run: go build -o bin/siwp cmd/siwp/siwp.go
